# LoggerLIB-C

./: CMakeLists.txt  LoggerLIB.c  Message.c
headers/: ArrayUtil.h  LoggerLIB.h  Message.h
utils/: ArrayUtil.c
